@@ -32,31 +32,16 @@ class Sabel_Response_Redirector extends Sabel_Object
   protected $parameters = array();
   
   /**
+   * @var string
+   */
+  protected $flagment = "";
+  
+  /**
    * @return boolean
    */
   public function isRedirected()
   {
     return $this->redirected;
-  }
-  
-  /**
-   * HTTP Redirect to another location with uri.
-   *
-   * @param string $uriParameter
-   * @param array  $parameters
-   *
-   * @return void
-   */
-  public function to($uriParameter, $parameters = array())
-  {
-    $context = Sabel_Context::getContext();
-    $uri = $context->getCandidate()->uri($uriParameter);
-    
-    if ($this->parameters = $parameters) {
-      $uri .= "?" . http_build_query($this->parameters, "", "&");
-    }
-    
-    return $this->uri($uri);
   }
   
   /**
@@ -79,21 +64,79 @@ class Sabel_Response_Redirector extends Sabel_Object
   }
   
   /**
+   * HTTP Redirect to another location with uri.
+   *
+   * @param string $uri
+   * @param array  $parameters
+   * @param string $flagment
+   *
+   * @return string
+   */
+  public function to($uri, $parameters = array(), $flagment = "")
+  {
+    $context = Sabel_Context::getContext();
+    
+    return $this->uri($context->getCandidate()->uri($uri), $parameters, $flagment);
+  }
+  
+  /**
    * @param string $uri
    *
    * @return void
    */
-  public function uri($uri)
+  public function uri($uri, $parameters = array(), $flagment = "")
   {
     $this->uri = "/" . ltrim($uri, "/");
+    
+    $this->setParameters($parameters);
+    $this->setFlagment($flagment);
+    
     $this->redirected = true;
     
     return $this->uri;
   }
   
-  public function getUri()
+  /**
+   * @return string
+   */
+  public function getUri($withParameter = true, $withFlagment = true)
   {
-    return $this->uri;
+    $uri = $this->uri;
+    
+    if ($withParameter && !empty($this->parameters)) {
+      $uri .= "?" . http_build_query($this->parameters, "", "&");
+    }
+    
+    if ($withFlagment && $this->flagment !== "") {
+      $uri .= "#{$this->flagment}";
+    }
+    
+    return $uri;
+  }
+  
+  /**
+   * @param array $parameters
+   *
+   * @return self
+   */
+  public function setParameters(array $parameters)
+  {
+    $this->parameters = $parameters;
+    
+    return $this;
+  }
+  
+  /**
+   * @param string $key
+   * @param mixed  $value
+   *
+   * @return self
+   */
+  public function addParameter($key, $value)
+  {
+    $this->parameters[$key] = $value;
+    
+    return $this;
   }
   
   /**
@@ -102,5 +145,47 @@ class Sabel_Response_Redirector extends Sabel_Object
   public function hasParameters()
   {
     return (count($this->parameters) > 0);
+  }
+  
+  /**
+   * @param string $key
+   *
+   * @return self
+   */
+  public function deleteParameter($key)
+  {
+    unset($this->parameters[$key]);
+    
+    return $this;
+  }
+  
+  /**
+   * @return self
+   */
+  public function clearParameters()
+  {
+    $this->parameters = array();
+    
+    return $this;
+  }
+  
+  /**
+   * @param string $flagment
+   *
+   * @return self
+   */
+  public function setFlagment($flagment)
+  {
+    $this->flagment = $flagment;
+    
+    return $this;
+  }
+  
+  /**
+   * @return string
+   */
+  public function getFlagment()
+  {
+    return $this->flagment;
   }
 }
