@@ -1,3 +1,8 @@
+2010-05-02  ebin <yutaka@ebine.org>
+
+	* sabel/response/Redirector.php: uri()にもパラメータを渡せるように変更。
+	flagmentに対応。
+
 2010-04-29  ebin <yutaka@ebine.org>
 
 	* generator/skeleton/en/tasks/Install.php: アドオンインストーラ修正。
